--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"images/ic_logo.png":["images/ic_logo.png"],"images/logos.png":["images/logos.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"packages/sn_progress_dialog/completed.png":["packages/sn_progress_dialog/example/assets/completed.png","packages/sn_progress_dialog/assets/completed.png"]}
