--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_towy_recovery_password",
-    "short_name": "flutter_towy_recovery_password",
+    "name": "sitiowebpersonal",
+    "short_name": "sitiowebpersonal",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
